# rtd-testing

./: README.rst  pyproject.toml
src/rtd_testing/: foo.py  io.py
